Closed Bug 436793 Opened 18 years ago Closed 18 years ago

Inconsistent function prototypes for DownloadMessagesForOffline and DeleteSubFolders functions

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9

People

(Reporter: standard8, Assigned: rain1)

References

Details

(Keywords: regression)

Attachments

(1 file)

Compiling nsMailModule.cpp on latest trunk I'm seeing: /Users/moztest/mozilla/hg/mozilla/mailnews/build/../base/util/nsMsgDBFolder.h:83: warning: ‘virtual nsresult nsMsgDBFolder::DeleteSubFolders(nsIArray*, nsIMsgWindow*)’ was hidden /Users/moztest/mozilla/hg/mozilla/mailnews/build/../imap/src/nsImapMailFolder.h:256: warning: by ‘virtual nsresult nsImapMailFolder::DeleteSubFolders(nsIMutableArray*, nsIMsgWindow*)’ /Users/moztest/mozilla/hg/mozilla/mailnews/build/../base/util/nsMsgDBFolder.h:83: warning: ‘virtual nsresult nsMsgDBFolder::DownloadMessagesForOffline(nsISupportsArray*, nsIMsgWindow*)’ was hidden /Users/moztest/mozilla/hg/mozilla/mailnews/build/../imap/src/nsImapMailFolder.h:286: warning: by ‘virtual nsresult nsImapMailFolder::DownloadMessagesForOffline(nsIArray*, nsIMsgWindow*)’ /Users/moztest/mozilla/hg/mozilla/mailnews/build/../base/util/nsMsgDBFolder.h:83: warning: ‘virtual nsresult nsMsgDBFolder::DownloadMessagesForOffline(nsISupportsArray*, nsIMsgWindow*)’ was hidden /Users/moztest/mozilla/hg/mozilla/mailnews/build/../local/src/nsLocalMailFolder.h:192: warning: by ‘virtual nsresult nsMsgLocalMailFolder::DownloadMessagesForOffline(nsIArray*, nsIMsgWindow*)’ /Users/moztest/mozilla/hg/mozilla/mailnews/build/../base/util/nsMsgDBFolder.h:83: warning: ‘virtual nsresult nsMsgDBFolder::DownloadMessagesForOffline(nsISupportsArray*, nsIMsgWindow*)’ was hidden /Users/moztest/mozilla/hg/mozilla/mailnews/build/../news/src/nsNewsFolder.h:105: warning: by ‘virtual nsresult nsMsgNewsFolder::DownloadMessagesForOffline(nsIArray*, nsIMsgWindow*)’ This is a regression because we didn't get these before. The function prototypes were inconsistently/not all changed in bug 435290.
Flags: blocking-thunderbird3.0a2?
Fixing this.
Status: NEW → ASSIGNED
Assignee: nobody → sid1337
Status: ASSIGNED → NEW
Attached patch v1Splinter Review
v1, fixes this. Reworks imap folder's DeleteSubFolders slightly so as to not use a mutable array.
Attachment #323303 - Flags: review?(bugzilla)
Attachment #323303 - Flags: superreview?(bienvenu)
Blocks: 430614
Attachment #323303 - Flags: review?(bugzilla) → review+
Attachment #323303 - Flags: superreview?(bienvenu) → superreview+
Status: NEW → ASSIGNED
Keywords: checkin-needed
Checking in mailnews/base/public/nsIMsgFolder.idl; /cvsroot/mozilla/mailnews/base/public/nsIMsgFolder.idl,v <-- nsIMsgFolder.idl new revision: 1.198; previous revision: 1.197 done Checking in mailnews/base/search/src/nsMsgFilterService.cpp; /cvsroot/mozilla/mailnews/base/search/src/nsMsgFilterService.cpp,v <-- nsMsgFilterService.cpp new revision: 1.68; previous revision: 1.67 done Checking in mailnews/base/src/nsMsgDBView.cpp; /cvsroot/mozilla/mailnews/base/src/nsMsgDBView.cpp,v <-- nsMsgDBView.cpp new revision: 1.313; previous revision: 1.312 done Checking in mailnews/base/util/nsMsgDBFolder.cpp; /cvsroot/mozilla/mailnews/base/util/nsMsgDBFolder.cpp,v <-- nsMsgDBFolder.cpp new revision: 1.344; previous revision: 1.343 done Checking in mailnews/imap/src/nsImapMailFolder.cpp; /cvsroot/mozilla/mailnews/imap/src/nsImapMailFolder.cpp,v <-- nsImapMailFolder.cpp new revision: 1.815; previous revision: 1.814 done Checking in mailnews/imap/src/nsImapMailFolder.h; /cvsroot/mozilla/mailnews/imap/src/nsImapMailFolder.h,v <-- nsImapMailFolder.h new revision: 1.252; previous revision: 1.251 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: blocking-thunderbird3.0a2?
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: