Bug 436793 Inconsistent function prototypes for DownloadMessagesForOffline and DeleteSubFolders functions. p=Siddharth Agarwal <sid1337@gmail.com>,r=me,sr=bienvenu